<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    >

<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    android:layout_weight="2"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/login_bid" />

    <TextView
        android:lineSpacingMultiplier="2.5"
        android:lineSpacingExtra="6dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        android:text="@string/app_namebidwin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>


    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <TextView
            android:id="@+id/google_login"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:text="Google Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:id="@+id/tv_privacy"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:text="@string/textprviacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="6dp"
            android:layout_below="@id/tv_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:visibility="visible">



            <TextView
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/privacypolicy"
                android:layout_below="@+id/signInButton"
                android:id="@+id/txt_privacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="right"
                android:text="@string/termofservices"
                android:layout_below="@+id/signInButton"
                android:id="@+id/txt_termcondition"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />


        </LinearLayout>



    </LinearLayout>




<!--    <Button-->
<!--        android:visibility="gone"-->
<!--        android:onClick="emailLogin"-->
<!--        android:id="@+id/emillogin"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Email Login"-->
<!--        />-->

</LinearLayout>





